progressBar bug fix on mobile

--- a/styles/globals.css
+++ b/styles/globals.css
@@ -363,7 +363,7 @@ li{
     padding: 0;
     position: absolute;
     color: var(--title);
-    font-size: 0.6rem;
+    font-size: 0.8rem;
   }
 
   .dev > p{
